<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateHabitActivity">

    <EditText
        android:id="@+id/edit_title"
        android:hint="@string/apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_desc"
        android:hint="@string/apple_desc"
        android:lines="2"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/edit_btn"
        android:text="@string/et_btn"
        android:onClick="selectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/et_img"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:contentDescription="@string/img_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_save"
        android:text="@string/img_save"
        android:onClick="storeHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/error"
        android:visibility="invisible"
        android:textColor="#EF9A9A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

